--- a/JoF.Rail.Core.Web/Features/Shared/_Layout.cshtml
+++ b/JoF.Rail.Core.Web/Features/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
         <partial name="_CookieConsentPartial" />
     </header>
 
-    <main role="main" class="container pb-5 pt-4">
+    <main role="main" class="pb-5 pt-4">
         @RenderBody()
     </main>
 
