--- a/JoF.Rail.Core.Web/Features/Boards/Index.cshtml
+++ b/JoF.Rail.Core.Web/Features/Boards/Index.cshtml
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col">
             <h2>Live Departure Boards</h2>
-            <div>Live departure and arrival information boards - as they are displaying at the station.</div>
+            <p class="lead">Live departure and arrival information boards - as they are displaying at the station.</p>
         </div>
         <div class="col-1">
             <button type="button" class="btn btn-primary float-right font-weight-bold text-off-white" data-toggle="modal" data-target="#depBoardModal">?</button>
