--- a/JoF.Rail.Core.Web/Features/Historical/Index.cshtml
+++ b/JoF.Rail.Core.Web/Features/Historical/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿<div class="container">
     <div class="row">
         <div class="col">
-            <h2 class="text-mono">Historical Data</h2>
-            <div>Historical service performance data - basic information for any train in the past year.</div>
+            <h2 class="text-mono">Historical Service Performance</h2>
+            <p class="lead">Historical service performance data - basic information for any train in the past year.</p>
         </div>
         <div class="col-1">
             <button type="button" class="btn btn-primary float-right font-weight-bold text-off-white" data-toggle="modal" data-target="#hspModal">?</button>
