--- a/JoF.Rail.Core.Web/Features/NetworkOverview/Index.cshtml
+++ b/JoF.Rail.Core.Web/Features/NetworkOverview/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model JoF.Rail.Standard.Models.NetworkOverviewModel
 
 @{
-    ViewBag.Title = "Network Overview";
+    ViewBag.Title = "Network Performance";
 }
 
 @{
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col">
                 <h2>Network Performance</h2>
-                <div>Current performance of rail networks across the UK.</div>
+                <p class="lead">Current performance of rail networks across the UK.</p>
             </div>
             <div class="col-1">
                 <button type="button" class="btn btn-primary float-right font-weight-bold text-off-white" data-toggle="modal" data-target="#networkOverviewModal">?</button>
