--- a/JoF.Rail.Core.Web/Features/Shared/_Layout.cshtml
+++ b/JoF.Rail.Core.Web/Features/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" asp-controller="Boards" asp-action="Index">Departure Boards</a></li>
-                    <li class="nav-item"><a class="nav-link" asp-controller="NetworkOverview" asp-action="Index">Network Overview</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="NetworkOverview" asp-action="Index">Network Performance</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="Maps" asp-action="Station">Map</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="Historical" asp-action="Index">Historical Performance</a></li>
                 </ul>
