--- a/JoF.Rail.Core.Web/wwwroot/scss/site.scss
+++ b/JoF.Rail.Core.Web/wwwroot/scss/site.scss
@@ -71,7 +71,8 @@ $theme-colors: (
     "primary": $ticket-orange,
     "secondary": $ticket-grey,
     "info": $ticket-green,
-    "light": $off-white
+    "light": $off-white,
+    "danger": $br-red
 );
 
 $body-bg:       $off-white;
@@ -91,6 +92,7 @@ html {
 body {
     padding-top: 80px;
     padding-bottom: 70px;
+    font-family: $font-family-sans-serif;
 }
 
 nav ul.navbar-nav li.active, 
@@ -253,4 +255,8 @@ text-mono {
 .chart {
     width: 100% !important;
     min-height: 400px;
+}
+
+.track-bg {
+    background-image: url("../../images/track-bg.png");
 }
